<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/set_event_restrictions_id"
        tools:context=".event.creator.SetEventRestrictionsActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/set_event_restrictions_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.ConnectOut.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/set_event_restrictions_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/Theme.ConnectOut.PopupOverlay"
                app:navigationIcon="@drawable/back_arrow_image">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/set_event_restrictions_toolbar_title" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/set_event_restrictions_content"
            android:layout_above="@+id/set_event_restrictions_save_button"
            android:layout_below="@id/set_event_restrictions_appbar">

        <TextView
                android:id="@+id/set_event_restrictions_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:padding="10dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/fab_margin"
                android:text="Set Event Restrictions"
                android:textSize="16sp"
                android:textAllCaps="true"
                android:textAlignment="center" />

        <EditText
                android:id="@+id/set_event_restrictions_min_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/set_event_restrictions_title"
                android:ems="10"
                android:padding="20dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/fab_margin"
                android:inputType="numberDecimal"
                android:hint="Minimum user rating allowed" />

        <EditText
                android:id="@+id/set_event_restrictions_max_num_participants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/set_event_restrictions_min_rating"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:ems="15"
                android:padding="20dp"
                android:hint="Maximum number of participants"
                android:inputType="number" />

        <TextView
                android:id="@+id/set_event_restrictions_deadline_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Joining event deadline"
                android:padding="19dp"
                android:textSize="16sp"
                android:layout_below="@+id/set_event_restrictions_max_num_participants" />

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:id="@+id/set_event_restrictions_select_time"
                android:layout_below="@+id/set_event_restrictions_deadline_description">

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/set_event_restrictions_in_date"
                    android:layout_marginTop="0dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:padding="15dp"
                    android:hint="dd-mm-yyyy" />

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SELECT DATE"
                    android:id="@+id/set_event_restrictions_btn_date"
                    android:layout_alignBottom="@+id/set_event_restrictions_in_date"
                    android:layout_toRightOf="@+id/set_event_restrictions_in_date"
                    android:layout_toEndOf="@+id/set_event_restrictions_in_date"
                    android:layout_alignTop="@+id/set_event_restrictions_in_date"
                    android:layout_marginLeft="5dp" />

            <EditText
                    android:id="@+id/set_event_restrictions_in_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/set_event_restrictions_in_date"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:padding="15dp"
                    android:hint="hh:mm:ss" />

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SELECT TIME"
                    android:id="@+id/set_event_restrictions_btn_time"
                    android:layout_alignBottom="@+id/set_event_restrictions_in_time"
                    android:layout_below="@+id/set_event_restrictions_btn_date"
                    android:layout_alignLeft="@+id/set_event_restrictions_btn_date"
                    android:layout_alignStart="@+id/set_event_restrictions_btn_date" />

        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/set_event_restrictions_fragment_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:defaultNavHost="true"
                android:layout_below="@+id/set_event_restrictions_select_time"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_marginEnd="@dimen/fab_margin"
                android:layout_marginBottom="@dimen/fab_margin" />


    </RelativeLayout>


    <Button
            android:id="@+id/set_event_restrictions_save_button"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save" />


</RelativeLayout>